--- a/DataStuctsProject_1.cbp
+++ b/DataStuctsProject_1.cbp
@@ -35,12 +35,14 @@
 		<Unit filename="include/AVL.h" />
 		<Unit filename="include/Database.h" />
 		<Unit filename="include/IO.h" />
+		<Unit filename="include/MinHeap.h" />
 		<Unit filename="include/Node.h" />
 		<Unit filename="include/treeNode.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/AVL.cpp" />
 		<Unit filename="src/Database.cpp" />
 		<Unit filename="src/IO.cpp" />
+		<Unit filename="src/MinHeap.cpp" />
 		<Unit filename="src/Node.cpp" />
 		<Unit filename="src/treeNode.cpp" />
 		<Extensions>
